--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
 
     devpi:
         container_name: devpi
-        image: m3talstorm/devpi:latest
+        image: metalstorm/devpi:latest
         restart: always
         build: .
         ports:
